Fix each Worker to one DNS zone
